--- a/index.html
+++ b/index.html
@@ -3,56 +3,62 @@
 
 <head>
   <meta charset="utf-8">
-  <title> 😈 Saurabh bonde</title>
+  <title>Saurabh bonde</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link class="master" rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arizonia&family=Dancing+Script&family=Merriweather:wght@300&family=Montserrat:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table>
-    <tr>
-      <td><img src="doctor.webp" alt="Doctor photo"></td>
-      <td>
-        <h1>DR.SAURABH BONDE</h1>
-        <p>Just gave my medical entreance examination.</p>
-        <p>I am a doctor in making and learning to develop website to make some quick cash.</p>
-      </td>
-    </tr>
-  </table>
-  <hr size="3" noshade>
-  <ul>
-    <h2>My Likes - </h2>
-    <li>Badminton</li>
-    <li>Gaming</li>
-    <li>Reading Novels</li>
-  </ul>
-  <hr size="3" noshade>
-  <table cellspacing="10" border="1">
-    <thead>
-      <tr>
-        <th>Skills</th>
-        <th>Proficiency</th>
-        <th>Skills</th>
-        <th>Proficiency</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Editing</td>
-        <td>⭐⭐⭐⭐⭐</td>
-        <td>Creativity</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Writting skills</td>
-        <td>⭐⭐⭐⭐⭐</td>
-        <td>Web development</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr size="3" noshade>
-  <br>
-  <br>
-  <strong><a href="Contact-me.html">Contact Me</a></strong>
+  <div class="top-conatiner">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+    <h1>I'm Saurabh.</h1>
+    <p>A Web Developer</p>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    <div class="middle-container">
+      <div class="profile">
+        <img class="profile-pic" src="doctor.webp" alt="Profile-pic">
+        <h2>Hello.</h2>
+        <p class="paragraph">I am a doctor in making and I am prety good at what I do. I am here to fulfill my hobby. </p>
+
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="badminton" src="images/badminton-skill2.jpeg" alt="badminton-pic">
+          <h3>Badminton</h3>
+          <p>I am very intrested in badminton and I like to play badminton a lot and never feel the need to stop when playing badminton.</p>
+        </div>
+        <div class="skill-row">
+          <img class="coding" src="images/coding-skill.jpeg" alt="coding-pic">
+          <h3>Coding</h3>
+          <p>I have been intrested in coding since I was 12 years old.i have always been curious about the working of the programmes. I have always been mesmerised the by the end result of the code, its almost like magic.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>You can reach me at +91 9422804060.</h3>
+        <p>My address-26,Mai,Narendra nagar,Nagar.</p>
+        <a class="btn" href="mailto:Saurabhbonde123@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
+
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>© Saurabh Bonde.</p>
+    </div>
 </body>
+
+
 
 </html>
